Fix OpenSearch Sonar findings